--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -1,18 +1,18 @@
 ---
-name:Checks
+name: Checks
 
 on: [push]
 
 jobs: 
   tests-lint:
-    name: Test and List
-    runs-on: ubuntu-20-04
+    name: Test and Lint
+    runs-on: ubuntu-20.04
     steps:
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USER}}
-          username: ${{ secrets.DOCKERHUB_TOKEN}}
+          password: ${{ secrets.DOCKERHUB_TOKEN}}
       - name: Checkout
         uses: actions/checkout@v2
       - name: Test
